# biopaperminer

./: .gitignore  README.md  README_EN.md  USAGE.md  biopaperminer.spec  environment.yml  gui_entry.py  journal_abbr_list.txt  main.py  pyproject.toml  references.csv  requirements.txt
.github/workflows/: build.yml
biopaperminer/: __init__.py  analyzer.py  config.py  config_editor.py  download_pdf.py  download_pubmed.py  extract_references.py  extract_refs.py  extract_ris.py  gui.py  llm_client.py  main.py  mineru_client.py  models.py  pdf_extractor.py  pipeline.py  prompts.py  rename_pdfs.py  session_pool.py  tui.py
biopaperminer/templates/: report.html
pdf_download_results/failed_records/: failed_dois.txt  failed_dois_1783050860.json
scripts/: build_macos.sh  build_windows.bat
test_rename/耐干植物基因组/: DT植物参考文献.docx  文献内容整理.xlsx  文献阅读.md
test_rename/耐干植物基因组/兜叶绢藓和弯叶灰藓_Entodon_seductrix_Hypnum_curvifolium_Yu_2022_GBE_mineru/: 81d4c767-96af-4ffc-a357-753d4846bbc5_content_list.json  81d4c767-96af-4ffc-a357-753d4846bbc5_content_list_v2.json  81d4c767-96af-4ffc-a357-753d4846bbc5_model.json  full.md  layout.json
test_rename/耐干植物基因组/共生信号通路_SymbiosisSignalingPathway_Radhakrishnan_2020_NatPlants_mineru/: f1c81827-fa61-4617-9ef9-876d0e5160d0_content_list.json  f1c81827-fa61-4617-9ef9-876d0e5160d0_content_list_v2.json  f1c81827-fa61-4617-9ef9-876d0e5160d0_model.json  full.md  layout.json
test_rename/耐干植物基因组/卷柏_Selaginella_tamariscina_Xu_2018_MolPlant_mineru/: 6611aae6-6c6f-43d4-a3c8-795356b62bad_content_list.json  6611aae6-6c6f-43d4-a3c8-795356b62bad_content_list_v2.json  (+3 more)
