[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biopaperminer"
version = "2.0.0"
description = "生物文献挖掘系统 — PubMed 检索 → PDF 下载 → MinerU 解析 → LLM 分析 → 报告生成"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["bioinformatics", "literature-mining", "pubmed", "llm", "pdf"]

dependencies = [
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "certifi>=2024.0.0",
    "pandas>=2.0.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.0",
    "openai>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/sunning03/biopaperminer"

[project.scripts]
biopaperminer = "biopaperminer.main:main"

[tool.setuptools.packages.find]
include = ["biopaperminer*"]

[tool.setuptools.package-data]
biopaperminer = ["templates/*.html"]
